Fixed spacing in help

--- a/public/css/taskbook2.css
+++ b/public/css/taskbook2.css
@@ -388,7 +388,7 @@
 
 #helpDialogue{
     text-align: left;
-    max-height: 100%;
+    max-height: 78%;
     overflow-y:scroll;
 }
 
